<resources>
    <string name="app_name">AppPeluquería</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">No es un nombre de usuario valido</string>
    <string name="invalid_password">La contraseña no es válida</string>
    <string name="go_to_registration">¿Aún no tienes cuenta?</string>
    <string name="register_text">¿Qué eres?</string>
    <string name="register_admin_button">Peluquería o barbería</string>
    <string name="register_user_button">Cliente</string>
    <string name="register_admin_title">Registra tu negocio</string>
    <string name="register_user_title">Regístrate</string>
    <string name="email">Correo elctrónico</string>
    <string name="password">Contaseña</string>
    <string name="confirm_password">Confirma contraseña</string>
    <string name="user_name_admin">Nombre de tu negocio</string>
    <string name="user_name">Tu nombre y apellidos</string>
    <string name="register_button">Registrar</string>
    <string name="título">Sicssor Master</string>
    <string name="boton_menu_1">Pedir cita</string>
    <string name="reservation">Reservar cita</string>
    <string name="select_date">Selecciona fecha</string>
    <string name="select_hour">Selecciona hora</string>
    <string name="select_hairdesser">Selecciona servicio/a</string>
    <string name="boton_menu_2">Productos</string>
    <string name="boton_menu_3">Contáctanos</string>
    <string name="boton_menu_4">Trabaja con nosotros</string>
    <string name="hora_hint">00:00</string>
    <string name="dia_hint">01/12/2020</string>
    <string name="cuentanos_hint">¡Preparando el terreno!</string>
    <string name="cuentanos">¿Qué te harás?</string>
    <string name="chat">Chat directo</string>
    <string name="llamada">¡Llámanos!</string>
    <string name="hint_nombreapellido">Nombre y apellido</string>
    <string name="hint_num">123456789</string>
    <string name="curriculum">Adjunta tu currículum</string>
    <string name="boton_champus">Champús</string>
    <string name="boton_mascarillas">Cremas y mascarillas</string>
    <string name="boton_productosvarios">Productos varios</string>
    <string name="textview_appointment">Tus citas</string>
    <string name="textview_SeleccionPeluqueria">Peluquerías disponibles</string>
    <string name="button_cancelarcita">Cancelar cita</string>
    <string name="button_gestionarCita">Gestionar citas</string>
    <string name="button_gestionarHorario">Gestionar horarios</string>
    <string name="button_gestionarInfo">Gestionar Información</string>
    <string name="button_gestionarExpo">Expositor de artículos</string>
    <string name="gestionar_cita_text">Citas</string>
    <string name="horario_semanal">Horario semanal</string>
    <string name="horario_vacaciones">Horario vacacional</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="sabado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="añadir_horas">Añadir horas</string>
    <string name="añadir_servicio">Añadir servicio</string>
    <string name="hint_direcccion">Calle Ejemplo 123, Ciudad</string>
    <string name="hint_num_telf">987654321</string>
    <string name="hint_descripcion">Explica lo que quieras sobre tu negocio, da avisos o explica cosas.</string>
    <string name="hint_nuevo_servicio">Corte de pelo</string>
    <string name="add_servicio_button">Añadir servicio</string>
    <string name="button_eliminar_hora">Eliminar hora</string>
    <string name="button_eliminar_Servicio">Eliminar servicio</string>
    <string name="h_07">07:00</string>
    <string name="h_08">08:00</string>
    <string name="h_09">09:00</string>
    <string name="h_10">10:00</string>
    <string name="h_11">11:00</string>
    <string name="h_12">12:00</string>
    <string name="h_13">13:00</string>
    <string name="h_14">14:00</string>
    <string name="h_15">15:00</string>
    <string name="h_16">16:00</string>
    <string name="h_17">17:00</string>
    <string name="h_18">18:00</string>
    <string name="h_19">19:00</string>
    <string name="h_20">20:00</string>
    <string name="h_21">21:00</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>