<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:gl="http://schemas.android.com/apk/res-auto"
        tools:context=".MenuNegocioFragment"
        android:background="@drawable/foto_pelu_editada"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/lunes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardPreventCornerOverlap="true"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/white">

            <EditText
                android:id="@+id/edit_direccion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:hint="@string/hint_direcccion"
                android:textColorHint="@color/light_gray_2"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/martes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardPreventCornerOverlap="true"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/white">

            <EditText
                android:id="@+id/edit_num_telf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:hint="@string/hint_num_telf"
                android:textColorHint="@color/light_gray_2"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/miercoles"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:cardCornerRadius="15dp"
            app:cardPreventCornerOverlap="true"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/white">

            <EditText
                android:id="@+id/edit_descripcion"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:hint="@string/hint_descripcion"
                android:textColorHint="@color/light_gray_2"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/button_edit_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="15dp"
            app:cardPreventCornerOverlap="true"
            android:layout_marginTop="25dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/cardview_shadow_start_color">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/button_gestionarInfo"
                android:textSize="24dp"
                android:textColor="@color/white"
                android:textAlignment="center"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>